--- a/src/app/views/home/home.component.scss
+++ b/src/app/views/home/home.component.scss
@@ -20,6 +20,12 @@
 		width: 100%;
 	}
 
+	.error {
+		padding-top: 3px;
+		font-size: 0.75rem;
+		color: var(--semantic-02);
+	}
+
 	.row-control {
 		margin-bottom: 1.5rem;
 	}
