--- a/src/app/components/input/input.component.html
+++ b/src/app/components/input/input.component.html
@@ -7,6 +7,7 @@
 			placeholder="{{ placeholder }}"
 			[disabled]="isDisabled"
 			[(ngModel)]="value"
+			(focus)="handlerFocus()"
 		/>
 	</label>
 </div>
